# deepsearch_agent

./: README.md  pyproject.toml  requirement.txt
agent/: llm.py  main_agent.py  prompts.py
agent/subagents/: db_query_agent.py  network_search_agent.py
api/: server.py
prompt/: prompts.yml
ragflow/: chat_assistant_demo.py  demo.py
sql/: company_data.sql
tools/: db_tools.py  ragflow_tools.py  tavily_tool.py  upload_file_read_tool.py
utils/: word_converter.py
