[project]
name = "deepsearch"
version = "0.1.0"
description = "基于 Deep Agents 的数据库、知识库与联网搜索多智能体研究助手"
requires-python = ">=3.13"
dependencies = [
    "aiofiles==25.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.3",
    "aiosignal==1.4.0",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anthropic==0.83.0",
    "anyio==4.12.1",
    "arabic-reshaper==3.0.0",
    "asn1crypto==1.5.1",
    "attrs==25.4.0",
    "beartype==0.22.9",
    "bracex==2.6",
    "brotli==1.2.0",
    "certifi==2026.1.4",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "colorama==0.4.6",
    "cryptography==46.0.5",
    "cssselect2==0.9.0",
    "dataclasses-json==0.6.7",
    "deepagents==0.4.3",
    "distro==1.9.0",
    "docstring-parser==0.17.0",
    "et-xmlfile==2.0.0",
    "fastapi==0.129.2",
    "filetype==1.2.0",
    "fonttools==4.61.1",
    "freetype-py==2.5.1",
    "frozenlist==1.8.0",
    "google-auth==2.48.0",
    "google-genai==1.64.0",
    "greenlet==3.3.2",
    "h11==0.16.0",
    "html5lib==1.1",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "idna==3.11",
    "jinja2==3.1.6",
    "jiter==0.13.0",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "langchain==1.2.10",
    "langchain-anthropic==1.3.3",
    "langchain-classic==1.0.1",
    "langchain-community==0.4.1",
    "langchain-core==1.2.14",
    "langchain-google-genai==4.2.1",
    "langchain-openai==1.1.10",
    "langchain-text-splitters==1.1.1",
    "langgraph==1.0.9",
    "langgraph-checkpoint==4.0.0",
    "langgraph-prebuilt==1.0.8",
    "langgraph-sdk==0.3.8",
    "langsmith==0.7.6",
    "lxml==6.0.2",
    "markdown==3.10.2",
    "markupsafe==3.0.3",
    "marshmallow==3.26.2",
    "md2pdf==3.1.0",
    "multidict==6.7.1",
    "mypy-extensions==1.1.0",
    "mysql-connector-python==9.6.0",
    "numpy==2.4.2",
    "openai==2.21.0",
    "openpyxl==3.1.5",
    "orjson==3.11.7",
    "ormsgpack==1.12.2",
    "oscrypto==1.3.0",
    "packaging==26.0",
    "pandas==3.0.1",
    "pillow==12.1.1",
    "propcache==0.4.1",
    "pyasn1==0.6.2",
    "pyasn1-modules==0.4.2",
    "pycairo==1.29.0",
    "pycparser==3.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.13.1",
    "pydyf==0.12.1",
    "pygments==2.19.2",
    "pyhanko==0.33.0",
    "pyhanko-certvalidator==0.29.1",
    "pymdown-extensions==10.21",
    "pypdf==6.7.2",
    "pyphen==0.17.2",
    "python-bidi==0.6.7",
    "python-dateutil==2.9.0.post0",
    "python-docx==1.2.0",
    "python-dotenv==1.2.1",
    "python-frontmatter==1.1.0",
    "python-multipart==0.0.22",
    "pyyaml==6.0.3",
    "ragflow-sdk==0.24.0",
    "regex==2026.2.19",
    "reportlab==4.4.10",
    "requests==2.32.5",
    "requests-toolbelt==1.0.0",
    "rlpycairo==0.4.0",
    "rsa==4.9.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.46",
    "starlette==0.52.1",
    "svglib==1.6.0",
    "sympy>=1.14.0",
    "tavily-python==0.7.21",
    "tenacity==9.1.4",
    "tiktoken==0.12.0",
    "tinycss2==1.5.1",
    "tinyhtml5==2.0.0",
    "tqdm==4.67.3",
    "typing-extensions==4.15.0",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.3",
    "tzlocal==5.3.1",
    "uritools==6.0.1",
    "urllib3==2.6.3",
    "uuid-utils==0.14.1",
    "uvicorn==0.41.0",
    "watchfiles==1.1.1",
    "wcmatch==10.1",
    "weasyprint==68.1",
    "webencodings==0.5.1",
    "websockets==15.0.1",
    "xhtml2pdf==0.2.17",
    "xxhash==3.6.0",
    "yarl==1.22.0",
    "zopfli==0.4.1",
    "zstandard==0.25.0",
]
